# django-klingon

./: .gitignore  .readthedocs.yaml  .travis.yml  AUTHORS  AUTHORS.md  CONTRIBUTING.md  CONTRIBUTING.rst  HISTORY.md  HISTORY.rst  MANIFEST.in  Makefile  README.md  README.rst  REVIVAL_PLAN.md  pyproject.toml  requirements-test.txt  runtests.py  setup.py  tox.ini
.github/: dependabot.yml
.github/workflows/: docs.yml  tests.yml
docs/: conf.py  index.md  index.rst  installation.md  installation.rst  usage.md  usage.rst
example_project/: db.sqlite3
example_project/example_project/: settings.py  urls.py
example_project/testapp/: admin.py  models.py
klingon/: __init__.py  admin.py  apps.py  compat.py  models.py
klingon/management/commands/: translatemodels.py
klingon/migrations/: 0001_initial.py
klingon/tests/: test_api.py  test_commands.py
klingon/tests/testapp/: models.py
tests/: conftest.py  settings.py  test_admin.py  test_api.py  test_commands.py  test_models_extra.py  test_regressions.py
tests/testapp/: models.py
