[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "django-klingon"
dynamic = ["version", "readme"]
authors = [
    {name = "Rafael Capdevielle, Angel Velasquez", email = "angvp@archlinux.org"},
]
description = "django-klingon is an attempt to make django model translation suck but with no integrations pain in your app!"
license = {text = "GPL"}
requires-python = ">=3.10"
dependencies = [
    "Django>=4.2,<7.0",
]
classifiers = [
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.2",
    "Framework :: Django :: 6.0",
    "Development Status :: 4 - Beta",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "http://github.com/angvp/django-klingon"

[project.optional-dependencies]
autoslug = ["django-easy-autoslug"]

[tool.setuptools]
include-package-data = true
zip-safe = false

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.dynamic]
version = {attr = "klingon.__version__"}
readme = {file = ["README.md", "HISTORY.md"], content-type = "text/markdown"}

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "C4", "DJ"]

[tool.ruff.lint.per-file-ignores]
"*/migrations/*.py" = ["E501"]

[dependency-groups]
# No version pins here — requirements-test.txt is the single source of
# truth for dev/test dependency floors (used by tox and CI). Keeping this
# group unpinned avoids two independently-drifting version sources.
dev = [
    "pytest",
    "pytest-django",
    "ruff",
]
